# a1

./: .autotools  README.md
trunk/: .gitignore  .project  CONTRIBUTORS  COPYRIGHT  INSTALL  Makefile.am  configure.ac  configure.in
trunk/.externalToolBuilders/: org.eclipse.cdt.managedbuilder.core.genmakebuilder.launch  org.eclipse.linuxtools.cdt.autotools.core.genmakebuilderV2.launch
trunk/benchmarks/: line.plot
trunk/benchmarks/a1/: A1_AllFlushAll_latency.c  A1_Allreduce.c  A1_Allreduce_double.c  A1_Barrier.c  A1_Collectives.c  A1_PutAccS_bw.c  A1_PutS_latency.c  A1_RMW.c  DCMF_Allreduce.c  DCMF_Reduce_product.c  DCMF_Reduce_sumproduct.c  HOWTO.BE_LAZY  Makefile  double_hummer.c  get_a1.c  get_latency  hello_a1.c  ncput_a1.c  ncput_latency  perf_a1.c  put_a1.c  put_latency_regularflush  put_latency_scalefreeflush
trunk/benchmarks/a1/A1-vs-ARMCI/: A1_Get_bw.c  A1_PutAcc_bw.c  A1_PutAcc_latency.c  A1_PutS_handoff_results.output  A1_PutS_latency.c  A1_PutS_nohandoff_results.output  A1_PutS_overlap.c  A1_PutS_overlap_dgemm.c  A1_Put_bw.c  A1_Put_latency.c  ARMCI_Get_bw.c  ARMCI_PutAccS_latency.c  ARMCI_PutAcc_latency.c  FlushAll_A1.c  FlushAll_ARMCI.c  GetS_A1.c  GetS_ARMCI.c  Get_A1.c  Get_ARMCI-A1.c  Get_ARMCI.c  Makefile  NbGet_A1.c  NbGet_ARMCI.c  PutAccS_A1.c  PutAccS_ARMCI.c  PutAcc_A1.c  Put_A1.c  flush_all_1024  flush_all_512  flush_all_a1.c  flush_all_armci.c  get_a1.c  get_armci.c  get_armci_vs_a1  nbget_latency_a1.c  nbget_latency_armci.c  ncget_a1.c  ncget_armci.c  ncputacc_a1.c  ncputacc_armci.c  (+7 more)
trunk/benchmarks/a1/Results/: A1_PutS_handoff.eps  ARMCI_Get_latency.eps  ARMCI_Progress_mode.eps  AccS_latency_512.eps  AccS_latency_local.eps  AccS_latency_remote.eps  GetS_bw.eps  GetS_bw_512.eps  GetS_latency.eps  GetS_latency_512.eps  Get_bw.eps  Get_latency.eps  Put_bw.eps  Put_latency_local.eps  Put_latency_remote.eps  line.plot
trunk/benchmarks/armci/: ARMCI_AllFlushAll_latency.c  ARMCI_Bcast.c  ARMCI_IGOP_Scalar.c  ARMCI_IGOP_Vector.c  ARMCI_PutAcc_latency.c  ARMCI_Put_bw.c  ARMCI_RMW.c
trunk/benchmarks/armci-tests/: Makefile  msgcheck.c  test2.c
trunk/benchmarks/armci-vs-a1/: Makefile
trunk/benchmarks/bgp/: Makefile  accumulate.c  accumulate_unaligned.c  c_fabs.c  compiler_fsel.c
trunk/benchmarks/dcmf/: Makefile  accumulate_pipelining.c  bench.h  bench_impl.c  bgp_atomics.c  bgp_lockbox.c  bgp_pthread_lock.c  critical_section.c  flush_latency.c  get_contention.c  get_contention_16x16x16.c  get_contention_32x32x32.c  get_contention_8x16x32.c  get_contention_8x8x8.c  get_contention_torus.c  get_injection_torus.c  get_latency.c  halo_manytomany.c  lockbox.c  memcpy-vs-put.c  mrate_threaded.c  pthread_lock.c  put_contention.c  put_contention_16x16x16.c  put_contention_32x32x32.c  put_contention_8x16x32.c  put_contention_8x8x8.c  put_contention_torus.c  put_injection_torus.c  put_latency.c  put_localvsremote.c  put_noncontig_torus.c  put_remoteadvance.c  put_restart.c  send_contention_torus.c  send_localvsremote.c  send_remoteadvance.c  sparse_manytomany.c  windows.c
trunk/benchmarks/dcmf-coll/: DCMF_Allreduce.c  DCMF_Allreduce_sumproduct.c  DCMF_GlobalAllreduce.c  DCMF_Reduce_product.c  DCMF_Reduce_sum.c  DCMF_Reduce_sumproduct.c  Makefile
trunk/benchmarks/dmapp/: Makefile  dmapp_put.c
trunk/benchmarks/ga/: nga_1d_bench.c
trunk/benchmarks/ga-lite/: ga-lite.c
trunk/benchmarks/gni/: cq_write_test.c
trunk/benchmarks/mpi/: MPI_Allreduce_tests.c  Makefile  passive-target-acc.c  passive-target-get.c  passive-target-put-strided.c  passive-target-put.c  passive-target.pbs  pt-rma.c  pt-rma.pbs
trunk/benchmarks/mpi/transpose/: Makefile  matrix.c  matrix.h  parallel.c  serial.c
trunk/doc/: dcmfd-developer-notes  developer-notes  generic-developer-notes  mpid-developer-notes
trunk/m4/: aclocal_cc.m4  aclocal_util.m4
trunk/src/a1d/dcmf/: Makefile.mk  finalize.c  init.c
trunk/src/a1d/dcmfd/: Makefile.mk  dcmfd_allfence.c  dcmfd_allreduce.c  dcmfd_barrier.c  dcmfd_bcast.c  dcmfd_bufferpool.c  dcmfd_cht.c  dcmfd_collectives.c  dcmfd_counter.c  dcmfd_fence.c  dcmfd_finalize.c  dcmfd_flush.c  dcmfd_flush_all.c  dcmfd_flush_group.c  dcmfd_free.c  dcmfd_get.c  dcmfd_gets.c  dcmfd_getv.c  dcmfd_handlepool.c  dcmfd_init.c  dcmfd_initialize.c  dcmfd_malloc.c  dcmfd_misc.c  dcmfd_mutex.c  dcmfd_param.c  dcmfd_put.c  dcmfd_putacc.c  dcmfd_putaccs.c  dcmfd_putaccv.c  dcmfd_putmodv.c  dcmfd_puts.c  dcmfd_putv.c  dcmfd_requestpool.c  dcmfd_rmw.c  dcmfd_util.c  dcmfd_wait.c  dcmfdimpl.h
trunk/src/a1d/mpi2rmad/: mpi2rmad_collectives.c  mpi2rmad_finalize.c  mpi2rmad_flush.c  mpi2rmad_free.c  mpi2rmad_get.c  mpi2rmad_initialize.c  mpi2rmad_misc.c  mpi2rmad_param.c
trunk/src/a1d/mpid/: Makefile.mk  mpi2rmad_flush_all.c  mpi2rmad_initialize.c  mpid_put.c
trunk/src/a1d/pthreadd/: pthreadd_initialize.c  pthreaddimpl.h
trunk/src/adl/: Makefile.mk  adl_allfence.c  adl_collectives.c  adl_fence.c  adl_finalize.c  adl_flush.c  adl_flush_all.c  adl_flush_group.c  adl_free.c  adl_get.c  adl_gets.c  adl_handle.c  adl_init.c  adl_initialize.c  adl_malloc.c  adl_misc.c  adl_put.c  adl_putacc.c  adl_putaccs.c  adl_putaccv.c  adl_puts.c  adl_wait.c  finalize.c  init.c
trunk/src/adl/api/: Makefile.mk  adl_collectives.c  adl_finalize.c  adl_flush.c  adl_flush_group.c  adl_free.c  adl_get.c  adl_gets.c  adl_getv.c  adl_handle.c  adl_initialize.c  adl_malloc.c  adl_mutex.c  adl_put.c  adl_putacc.c  adl_putaccs.c  adl_putaccv.c  adl_putmodv.c  adl_puts.c  adl_putv.c  adl_rmw.c  adl_wait.c
trunk/src/adl/interfaces/: armci_a1.c
trunk/src/adl/interfaces/am_src/: am_mpi.hpp
trunk/src/adl/interfaces/armci/: Makefile.mk  armci_a1.c
trunk/src/adl/interfaces/simple-armci/: Makefile  a1d_api.h  a1d_atomic.c  a1d_atomic.h  a1d_comm.c  a1d_comm.h  a1d_core.c  a1d_core.h  a1d_globals.h  a1d_headers.h  a1d_main.c  (+16 more)
trunk/src/adl/util/: Makefile.mk  a1u_acc.c  a1u_get.c  a1u_local_ops.c  a1u_mod.c  a1u_param.c  a1u_put.c  a1u_time_cycles.c
trunk/src/armcid/dcmf/: Makefile.mk  finalize.c  init.c
trunk/src/include/: a1.h  a1.h.in  a1d.h  a1u.h  armci.h  armcid.h  armciu.h
(+343 files in other folders)
